nobase_pkginclude_HEADERS =
noinst_HEADERS =
python_SCRIPTS =
noinst_LTLIBRARIES =
libespresso_common_la_SOURCES =
DIST_SUBDIRS = 
EXTRA_DIST =
python_LTLIBRARIES =
CLEANFILES =

include SubMakefile.am
include include/SubMakefile.am
include esutil/SubMakefile.am
include bc/SubMakefile.am
include storage/SubMakefile.am
include iterator/SubMakefile.am
include interaction/SubMakefile.am
include integrator/SubMakefile.am
include main/SubMakefile.am

##############################
## PYTHON
##############################

# python script handling
include $(top_srcdir)/build-aux/macros/axes_python.am


